# summa-sp1

program/: Cargo.toml
program/src/: lib.rs  main.rs
program/src/merkle_sum_tree/: mod.rs  node.rs  proof_gen.rs
program/src/merkle_sum_tree/utils/: build_tree.rs  mod.rs
program/src/poseidon/: poseidon_spec.rs
script/: Cargo.toml  proof-with-io.json  proof.json
script/src/: main.rs
