[workspace]

[package]
version = "0.1.0"
name = "summa-sp1"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
halo2_proofs = { git = "https://github.com/summa-dev/halo2"}
halo2_gadgets = { git = "https://github.com/summa-dev/halo2"}
once_cell = "1.8.0" 
rand = "0.8"
#ark-std = { version = "0.3.0", features = ["print-trace"] }
#tabbycat = { version = "0.1", features = ["attributes"], optional = true }
csv = "1.1"
#serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
num-bigint = "0.4"
#num_cpus = "1.15"
#halo2_solidity_verifier = {git = "https://github.com/summa-dev/halo2-solidity-verifier", features = ["evm"]}
itertools = "0.11.0"
#ethers = { version = "2.0.7", default-features = false, features = ["ethers-solc"] }
#regex-simple = { version = "1", package = "regex" }
#nova-snark = "0.23.0"
#nova-scotia = { git = "https://github.com/nalinbhardwaj/Nova-Scotia" }
#poseidon-rs = { git = "https://github.com/arnaucube/poseidon-rs" }
#ff = {package="ff_ce" , version="0.11", features = ["derive"]}
#num-traits = "0.2.16"
rayon = "1.8.0"